kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conscoord-api-ingress
  namespace: kgb-conscoord
spec:
  rules:
  - host: conscoord.duckdns.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: conscoord-api-service
            port:
              number: 8080
